--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Javascript tutorial on Loops</h1>
-
+    <img src="./images/JavaScript-Logo.png" alt="">
     <script src="script1.js"></script>
 </body>
 </html>
